--- a/app/src/main/res/layout/activity_create_challenge.xml
+++ b/app/src/main/res/layout/activity_create_challenge.xml
@@ -19,66 +19,118 @@
     android:id="@+id/LinearLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     android:background="@color/white"
+    android:orientation="vertical"
     tools:context="br.com.ema.activities.admin.CreateTextActivity">
 
-    <EditText
-        android:id="@+id/word"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:ems="10"
-        android:inputType="" />
-
-    <GridLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/white"
-        android:id="@+id/actions">
-        <Button
-            style="@style/DashboardButton"
-            android:id="@+id/send"
-            android:drawableTop="@drawable/ic_add_circle_black_48dp"
-            android:onClick="saveWord"
-            android:text="@string/save" />
-        <Button
-            style="@style/DashboardButton"
-            android:text="@string/image"
-            android:id="@+id/abc"
-            android:onClick="onToCamera"
-            android:drawableTop="@drawable/ic_camera_alt_black_48dp" />
-    </GridLayout>
-
-
-    <TextView
-        android:id="@+id/status"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textSize="@dimen/activity_horizontal_margin"
-        android:typeface="serif" />
-
     <LinearLayout
-        android:id="@+id/image"
-        android:layout_width="fill_parent"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_weight="0.20"
         android:orientation="horizontal">
-
-
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:textColor="@color/blue"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:text="@string/Word"
+            android:id="@+id/textView"
+            android:textSize="40sp"
+            android:textStyle="bold" />
     </LinearLayout>
 
-    <ImageView
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="0.30"
+        android:orientation="horizontal">
+
+        <ImageView
+            android:id="@+id/image"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_gravity="center"
+            android:adjustViewBounds="true"
+            android:contentDescription="@string/image"
+            android:cropToPadding="true"
+            android:orientation="vertical"
+            android:padding="2dp"
+            android:paddingBottom="2dp"
+            android:paddingEnd="2dp"
+            android:paddingLeft="2dp"
+            android:paddingRight="2dp"
+            android:paddingStart="2dp"
+            android:paddingTop="2dp"
+            android:src="@drawable/ic_photo_black_48dp" />
+    </LinearLayout>
+
+
+
+
+    <LinearLayout
+        android:id="@+id/text"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="0.20"
+        android:layout_gravity="center"
+        android:background="@color/white"
+        android:orientation="horizontal">
+
+        <EditText
+            android:id="@+id/word"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_margin="2dp"
+            android:layout_marginBottom="2dp"
+            android:layout_marginEnd="2dp"
+            android:layout_marginLeft="2dp"
+            android:layout_marginRight="2dp"
+            android:layout_marginStart="2dp"
+            android:layout_marginTop="2dp"
+            android:adjustViewBounds="true"
+            android:background="@color/blue"
+            android:ems="10"
+            android:hint="@string/Word"
+            android:inputType=""
+            android:padding="2dp"
+            android:paddingBottom="2dp"
+            android:paddingEnd="2dp"
+            android:paddingLeft="2dp"
+            android:paddingRight="2dp"
+            android:paddingStart="2dp"
+            android:paddingTop="2dp"
+            android:textSize="24sp"
+            android:textStyle="bold" />
+        </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/actions"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/imageViewPicture"
-        android:layout_gravity="center_vertical"
-        android:contentDescription="@string/image" />
+        android:layout_gravity="center"
+        android:layout_weight="0.10"
+        android:background="@color/white"
+        android:orientation="horizontal">
 
-  <!--  <Button
-        android:theme="@style/GoBackButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/menu"
-        android:id="@+id/menuButton"
-        android:onClick="toMenu"/> -->
+        <Button
+            android:id="@+id/cancel"
+            style="@style/DashboardButton"
+            android:drawableTop="@drawable/ic_cancel_black_48dp"
+            android:onClick="toWordsList"
+            android:text="@string/cancel" />
+        <Button
+            android:id="@+id/send"
+            style="@style/DashboardButton"
+            android:drawableTop="@drawable/ic_save_black_48dp"
+            android:onClick="saveWord"
+            android:text="@string/save" />
 
+        <Button
+            android:id="@+id/takePicture"
+            style="@style/DashboardButton"
+            android:drawableTop="@drawable/ic_add_a_photo_black_48dp"
+            android:onClick="onToCamera"
+            android:text="@string/newPhoto" />
+    </LinearLayout>
 </LinearLayout>
