--- a/app/src/main/res/layout/activity_take_photo.xml
+++ b/app/src/main/res/layout/activity_take_photo.xml
@@ -15,15 +15,19 @@
   ~ limitations under the License.
   -->
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
+    tools:context="br.com.ema.activities.operations.TakePhotoActivity"
+
     >
     <LinearLayout
         android:orientation="horizontal"
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
+        android:layout_weight="0.10"
         >
         <TextView
             android:layout_width="match_parent"
@@ -31,35 +35,59 @@
             android:gravity="center"
             android:textColor="@color/blue"
             android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="@string/takeBigPicture"
+            android:text="@string/Photo"
             android:id="@+id/textView"
             android:textSize="30sp"
             android:textStyle="bold" />
     </LinearLayout>
-    <GridLayout
-        android:orientation="vertical"
-        android:layout_height="wrap_content"
+
+
+    <LinearLayout
         android:layout_width="match_parent"
-        >
+        android:layout_height="wrap_content"
+        android:layout_weight="0.60"
+        android:orientation="horizontal">
+
+        <ImageView
+            android:id="@+id/photo"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_gravity="center"
+            android:adjustViewBounds="true"
+            android:contentDescription="@string/image"
+            android:cropToPadding="true"
+            android:orientation="vertical"
+            android:src="@drawable/ic_photo_camera_black_48dp" />
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="0.10"
+        android:orientation="vertical"
+        android:layout_gravity="center_vertical">
+
         <Button
-            android:theme="@style/PhotoButton"
-            android:text="@string/takeBigPicture"
             android:id="@+id/btnTakePhoto"
-            android:layout_height="wrap_content"
-            android:layout_width="match_parent" />
-        <Button
-            android:theme="@style/BlueButton"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/save"
+            android:text="@string/newPhoto"
+            android:onClick="launchCamera"
+            android:theme="@style/PhotoButton" />
+
+        <Button
             android:id="@+id/ok"
-            android:onClick="toChallenge"/>
-    </GridLayout>
-    <ImageView
-        android:layout_height="wrap_content"
-        android:layout_width="match_parent"
-        android:visibility="visible"
-        android:id="@+id/photo"
-        android:contentDescription="@string/image" />
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:onClick="toChallenge"
+            android:text="@string/ok"
+            android:theme="@style/BlueButton" />
+        <Button
+            android:id="@+id/cancel"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:onClick="toChallenge"
+            android:text="@string/cancel"
+            android:theme="@style/CancelButton" />
+    </LinearLayout>
 
 </LinearLayout>
