--- a/app/src/main/res/layout/activity_abc.xml
+++ b/app/src/main/res/layout/activity_abc.xml
@@ -93,7 +93,7 @@
             android:id="@+id/goBackBtn"
             android:onClick="goBack"/>
         <Button
-            android:theme="@style/AddButton"
+            android:theme="@style/BlueButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/save"
