--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -167,7 +167,7 @@
             android:onClick="goBack"/>
 
         <Button
-            android:theme="@style/AddButton"
+            android:theme="@style/BlueButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/save"
