--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -57,20 +57,19 @@
         <item name="colorControlHighlight">@color/green</item>
         <item name="colorAccent">@color/green</item>
     </style>
-    <style name="GoBackButton">
-        <item name="android:buttonStyle">@style/Widget.AppCompat.Button.Borderless.Colored</item>
-        <item name="android:textStyle">bold</item>
-        <item name="colorControlHighlight">@color/black</item>
-        <item name="colorAccent">@color/black</item>
-    </style>
-    <style name="GreenButton">
-        <item name="android:buttonStyle">@style/Widget.AppCompat.Button.Borderless.Colored</item>
-        <item name="android:textStyle">bold</item>
-        <item name="colorControlHighlight">@color/green</item>
-        <item name="colorAccent">@color/green</item>
-    </style>
-    <style name="RedButton">
-        <item name="android:buttonStyle">@style/Widget.AppCompat.Button.Borderless.Colored</item>
+    <!--<style name="GoBackButton">-->
+    <!--<item name="android:buttonStyle">@style/Widget.AppCompat.Button.Borderless.Colored</item>-->
+    <!--<item name="android:textStyle">bold</item>-->
+    <!--<item name="colorControlHighlight">@color/black</item>-->
+    <!--<item name="colorAccent">@color/black</item>-->
+    <!--</style>-->
+    <!--<style name="GreenButton">-->
+    <!--<item name="android:buttonStyle">@style/Widget.AppCompat.Button.Borderless.Colored</item>-->
+    <!--<item name="android:textStyle">bold</item>-->
+    <!--<item name="colorControlHighlight">@color/green</item>-->
+    <!--<item name="colorAccent">@color/green</item>-->
+    <!--</style>-->
+    <style name="RedButton" parent="Theme.AppCompat">
         <item name="colorButtonNormal">@color/red</item>
         <item name="android:textStyle">bold</item>
         <item name="colorControlHighlight">@color/white</item>
@@ -89,6 +88,17 @@
         <item name="colorButtonNormal">@color/red</item>
         <item name="android:textStyle">bold</item>
         <item name="colorControlHighlight">@color/white</item>
+    </style>
+    <style name="GreenButton" parent="Theme.AppCompat">
+        <item name="colorButtonNormal">@color/green</item>
+        <item name="android:textStyle">bold</item>
+        <item name="colorControlHighlight">@color/white</item>
+    </style>
+    <style name="GoBackButton" parent="Theme.AppCompat">
+        <item name="colorButtonNormal">@color/gray</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="colorControlHighlight">@color/gray</item>
     </style>
 
 </resources>
