--- a/app/src/main/res/layout/activity_student_game.xml
+++ b/app/src/main/res/layout/activity_student_game.xml
@@ -14,144 +14,203 @@
   ~ See the License for the specific language governing permissions and
   ~ limitations under the License.
   -->
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/LinearLayout"
-    android:layout_width="match_parent"
-    android:background="@color/white"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="br.com.ema.activities.student.StudentGameActivity">
-
-    <LinearLayout
-        android:id="@+id/unscrambled"
+<android.support.constraint.ConstraintLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:id="@+id/MainLayout"
+        android:background="@color/white"
+        android:orientation="vertical"
+        tools:context="br.com.ema.activities.student.StudentGameActivity"
         android:layout_width="match_parent"
-        android:layout_height="39dp"
-        android:layout_marginTop="20dp"
+        android:layout_height="match_parent"
         android:layout_weight="0.10">
 
-
-
-        <EditText
-            android:id="@+id/answer"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_marginTop="20dp"
-            android:ems="10"
-            android:enabled="false"
-            android:inputType="text"
-            android:textColorLink="@android:color/primary_text_dark"
-            android:textSize="30sp"
-            android:textStyle="bold"
-            android:typeface="serif"
-            tools:ignore="NestedWeights"
-            android:focusable="false"
-            android:layout_weight="1.05" />
-
-        <Button
-            android:id="@+id/clear"
-            android:layout_width="48dp"
-            android:layout_height="38dp"
-            android:layout_marginTop="20dp"
-            android:enabled="false"
-            android:background="@color/white"
-            android:onClick="onClick"
-            android:drawableTop="@drawable/ic_backspace_black_24dp" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/images"
-        android:layout_width="312dp"
-        android:layout_height="153dp"
-        android:orientation="horizontal"
-        android:gravity="center_horizontal"
-        android:layout_gravity="center_horizontal"
-        android:layout_weight="0.34">
+        <ProgressBar
+            android:id="@+id/progressBar"
+            style="?android:attr/progressBarStyleHorizontal"
+            android:layout_width="131dp"
+            android:layout_height="0dp"
+            android:layout_gravity="center_vertical|center_horizontal"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginTop="16dp"
+            android:layout_marginLeft="8dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            android:layout_marginRight="8dp"
+            app:layout_constraintRight_toRightOf="parent"
+            android:layout_marginStart="8dp"
+            android:layout_marginEnd="8dp" />
 
         <ImageView
+            android:id="@+id/scrambbleImage"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/scrambbleImage"
             android:layout_gravity="center_vertical"
-            android:contentDescription="@string/imageOf" />
-    </LinearLayout>
+            android:contentDescription="@string/imageOf"
+            android:src="@drawable/ic_photo_black_48dp"
+            android:layout_marginRight="8dp"
+            app:layout_constraintRight_toRightOf="parent"
+            android:layout_marginLeft="8dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            android:layout_marginTop="8dp"
+            app:layout_constraintBottom_toBottomOf="@+id/awnser"
+            app:layout_constraintTop_toBottomOf="@+id/progressBar"
+            android:layout_marginBottom="8dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginEnd="8dp" />
 
-    <TextView
-        android:id="@+id/information"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/build_the_words"
-        android:textSize="@dimen/activity_horizontal_margin"
-        android:typeface="serif"
-        android:layout_gravity="center_horizontal"
-        android:gravity="center_horizontal" />
-
-    <GridLayout
-        android:id="@+id/scrambled"
+    <EditText
+        android:id="@+id/awnser"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_gravity="center_horizontal"
-        android:gravity="center|center_vertical|center_horizontal"
-        android:weightSum="1"
-        android:columnCount="7">
+        android:layout_marginEnd="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:cursorVisible="false"
+        android:hint="@string/Word"
+        android:inputType=""
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/scrambbleImage" />
 
-    </GridLayout>
-
-    <me.grantland.widget.AutofitLayout
-        android:id="@+id/help"
-        android:orientation="horizontal"
-        android:layout_width="fill_parent"
+    <ImageButton
+        android:id="@+id/speakerButton"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:gravity="center_horizontal"
-        android:layout_weight="0.55">
-        <me.grantland.widget.AutofitTextView
-            android:layout_width="match_parent"
-            android:layout_height="28dp"
-            android:layout_gravity="center_horizontal"
-            android:gravity="center_horizontal"
-            android:id="@+id/helpText"
-            android:maxLines="1" />
-    </me.grantland.widget.AutofitLayout>
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:background="@null"
+        android:contentDescription="@string/Word"
+        android:onClick="speak"
+        android:src="@drawable/speaker32dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.514"
+        app:layout_constraintLeft_toRightOf="@+id/stopBtn"
+        app:layout_constraintRight_toLeftOf="@+id/nextButton"
+        app:layout_constraintVertical_bias="0.957" />
 
+    <Button
+        android:id="@+id/stopBtn"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:onClick="onFinish"
+        android:theme="@style/RedButton"
+        android:text="@string/finish"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintVertical_bias="1.0"
+        android:layout_marginLeft="8dp"
+        android:layout_marginStart="8dp"
+        app:layout_constraintLeft_toLeftOf="parent" />
+
+    <Button
+        android:id="@+id/nextButton"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:layout_marginRight="15dp"
+        android:layout_marginTop="8dp"
+        android:onClick="onClick"
+        android:text="@string/next"
+        android:theme="@style/BlueButton"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginEnd="15dp"
+        app:layout_constraintTop_toBottomOf="@+id/fixedButtons"
+        app:layout_constraintVertical_bias="1.0" />
+
+    <TableLayout
+        android:id="@+id/fixedButtons"
+        android:layout_width="0dp"
+        android:stretchColumns="0,1,2"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        app:layout_constraintTop_toBottomOf="@+id/keyboardLayout"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintBottom_toTopOf="@+id/speakerButton"
+        app:layout_constraintVertical_bias="0.0"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginStart="8dp">
+
+    </TableLayout>
+
+    <TableRow
+        android:id="@+id/line4"
+        android:layout_width="wrap_content"
+        android:layout_height="33dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:background="@color/blue"
+        android:gravity="end"
+        android:orientation="horizontal"
+        app:layout_constraintBottom_toTopOf="@+id/nextButton"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        tools:layout_editor_absoluteX="209dp">
+
+        <Button
+            android:id="@+id/spaceBtn"
+            android:layout_width="80dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="end"
+            android:minHeight="5dp"
+            android:text="@string/keySpace"
+            android:textSize="12sp" />
+
+        <ImageButton
+            android:id="@+id/backspaceBtn"
+            android:layout_width="30dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="end"
+            android:background="@null"
+            android:contentDescription="@string/erase"
+            android:src="@drawable/ic_backspace_black_18dp" />
+    </TableRow>
+
+    <TextView
+        android:id="@+id/tip"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginTop="8dp"
+        android:text="@string/Word"
+        app:layout_constraintBottom_toTopOf="@+id/stopBtn"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toLeftOf="@+id/line4"
+        app:layout_constraintTop_toBottomOf="@+id/keyboardLayout" />
 
     <LinearLayout
-        android:id="@+id/speakers"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:gravity="center_horizontal">
-
-        <Button
-            android:id="@+id/stopBtn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:theme="@style/RedButton"
-            android:onClick="onFinish"
-            android:text="@string/finish" />
-
-        <ToggleButton
-            android:id="@+id/speechToggle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textOff="@string/speech_toggle_on"
-            android:textOn="@string/speech_toggle_on"
-            android:theme="@style/BlueButton"
-            android:layout_gravity="start"
-            android:checked="false" />
-
-        <Button
-            android:id="@+id/nextButton"
-            android:theme="@style/GreenButton"
-            android:layout_width="100dp"
-            android:layout_height="wrap_content"
-            android:onClick="onClick"
-            android:text="@string/next" />
+        android:id="@+id/keyboardLayout"
+        android:layout_width="0dp"
+        android:layout_height="147dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="-1dp"
+        android:background="@color/blue"
+        android:orientation="vertical"
+        app:layout_constraintBottom_toTopOf="@+id/line4"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/awnser"
+        app:layout_constraintVertical_bias="0.181">
 
     </LinearLayout>
-</LinearLayout>
+
+</android.support.constraint.ConstraintLayout>
+
