--- a/app/src/main/res/layout-large/activity_student_game.xml
+++ b/app/src/main/res/layout-large/activity_student_game.xml
@@ -43,8 +43,8 @@
 
         <ImageView
             android:id="@+id/scrambbleImage"
-            android:layout_width="0dp"
-            android:layout_height="191dp"
+            android:layout_width="313dp"
+            android:layout_height="288dp"
             android:layout_gravity="center_vertical"
             android:contentDescription="@string/imageOf"
             android:src="@drawable/ic_photo_black_48dp"
@@ -58,66 +58,64 @@
             android:layout_marginBottom="8dp"
             android:layout_marginStart="8dp"
             android:layout_marginEnd="8dp"
-            app:layout_constraintHorizontal_bias="0.503"
-            app:layout_constraintVertical_bias="0.0" />
+            tools:layout_editor_absoluteY="34dp"
+            app:layout_constraintHorizontal_bias="0.498" />
 
     <EditText
         android:id="@+id/awnser"
         android:layout_width="0dp"
-        android:layout_height="44dp"
+        android:layout_height="46dp"
         android:layout_marginEnd="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="27dp"
         android:cursorVisible="false"
         android:gravity="center"
         android:hint="@string/Word"
         android:inputType=""
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/scrambbleImage" />
+        app:layout_constraintTop_toBottomOf="@+id/scrambbleImage"
+        app:layout_constraintHorizontal_bias="0.503" />
 
     <ImageButton
         android:id="@+id/speakerButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="61dp"
+        android:layout_height="47dp"
         android:layout_gravity="center_horizontal"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
         android:background="@null"
         android:contentDescription="@string/Word"
         android:onClick="speak"
         android:src="@drawable/speaker32dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.514"
+        app:layout_constraintHorizontal_bias="0.513"
         app:layout_constraintLeft_toRightOf="@+id/stopBtn"
         app:layout_constraintRight_toLeftOf="@+id/nextButton"
-        app:layout_constraintVertical_bias="0.957" />
+        tools:layout_editor_absoluteY="834dp" />
 
     <Button
         android:id="@+id/stopBtn"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_width="150dp"
+        android:layout_height="48dp"
         android:onClick="onFinish"
         android:theme="@style/RedButton"
         android:text="@string/finish"
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginBottom="8dp"
-        app:layout_constraintVertical_bias="1.0"
         android:layout_marginLeft="8dp"
         android:layout_marginStart="8dp"
         app:layout_constraintLeft_toLeftOf="parent" />
 
     <Button
         android:id="@+id/nextButton"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_width="150dp"
+        android:layout_height="53dp"
         android:layout_marginBottom="8dp"
         android:layout_marginRight="15dp"
         android:layout_marginTop="8dp"
@@ -128,7 +126,8 @@
         app:layout_constraintRight_toRightOf="parent"
         android:layout_marginEnd="15dp"
         app:layout_constraintTop_toBottomOf="@+id/fixedButtons"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintVertical_bias="1.0"
+        tools:layout_editor_absoluteX="436dp" />
 
     <TableLayout
         android:id="@+id/fixedButtons"
@@ -148,19 +147,20 @@
 
     <TableRow
         android:id="@+id/line4"
-        android:layout_width="wrap_content"
+        android:layout_width="161dp"
         android:layout_height="33dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
         android:background="@color/blue"
         android:gravity="end"
         android:orientation="horizontal"
-        app:layout_constraintBottom_toTopOf="@+id/nextButton"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginRight="8dp"
         app:layout_constraintRight_toRightOf="parent"
-        tools:layout_editor_absoluteX="209dp">
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/keyboardLayout"
+        tools:layout_editor_absoluteX="432dp"
+        tools:layout_editor_absoluteY="746dp">
 
         <Button
             android:id="@+id/spaceBtn"
@@ -184,37 +184,35 @@
     <TextView
         android:id="@+id/tip"
         android:layout_width="0dp"
-        android:layout_height="20dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginTop="8dp"
-        android:gravity="center"
+        android:layout_height="0dp"
         android:text="@string/Word"
+        android:layout_marginTop="9dp"
+        app:layout_constraintTop_toBottomOf="@+id/awnser"
+        android:layout_marginBottom="8dp"
         app:layout_constraintBottom_toTopOf="@+id/keyboardLayout"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginRight="8dp"
+        android:gravity="center"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/awnser" />
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintVertical_bias="0.454"
+        app:layout_constraintHorizontal_bias="0.5" />
 
     <LinearLayout
         android:id="@+id/keyboardLayout"
-        android:layout_width="0dp"
-        android:layout_height="139dp"
-        android:layout_marginBottom="8dp"
+        android:layout_width="581dp"
+        android:layout_height="219dp"
         android:layout_marginEnd="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="-1dp"
+        android:layout_marginTop="55dp"
         android:background="@color/blue"
         android:orientation="vertical"
-        app:layout_constraintBottom_toTopOf="@+id/line4"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/awnser"
-        app:layout_constraintVertical_bias="1.0">
+        app:layout_constraintTop_toBottomOf="@+id/awnser">
 
     </LinearLayout>
 
