--- a/app/src/main/res/layout/activity_create_challenge.xml
+++ b/app/src/main/res/layout/activity_create_challenge.xml
@@ -21,7 +21,7 @@
     android:layout_height="match_parent"
     android:background="@color/white"
     android:orientation="vertical"
-    tools:context="com.ema.org.ema.activities.admin.CreateTextActivity">
+    tools:context="org.ema.activities.admin.CreateTextActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
