--- a/app/src/main/res/layout/activity_data_analysis.xml
+++ b/app/src/main/res/layout/activity_data_analysis.xml
@@ -25,7 +25,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.ema.org.ema.activities.operations.DataAnalysisActivity">
+    tools:context="org.ema.activities.operations.DataAnalysisActivity">
     <LinearLayout
         android:id="@+id/head"
         android:layout_width="match_parent"
