--- a/app/src/main/res/layout/activity_initial_loading.xml
+++ b/app/src/main/res/layout/activity_initial_loading.xml
@@ -10,7 +10,7 @@ android:paddingBottom="@dimen/activity_vertical_margin"
 android:paddingLeft="@dimen/activity_horizontal_margin"
 android:paddingRight="@dimen/activity_horizontal_margin"
 android:paddingTop="@dimen/activity_vertical_margin"
-tools:context="com.ema.org.ema.activities.InitialLoadingActivity"
+tools:context="org.ema.activities.InitialLoadingActivity"
     android:weightSum="1">
 
     <ImageView
