--- a/app/src/main/res/layout/activity_user.xml
+++ b/app/src/main/res/layout/activity_user.xml
@@ -25,7 +25,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:background="@color/white"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.ema.org.ema.activities.admin.UserActivity"
+    tools:context="org.ema.activities.admin.UserActivity"
     android:weightSum="1">
 
     <ImageView
