--- a/app/src/main/res/layout/activity_abc.xml
+++ b/app/src/main/res/layout/activity_abc.xml
@@ -14,90 +14,105 @@
   ~ See the License for the specific language governing permissions and
   ~ limitations under the License.
   -->
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/LinearLayout"
+    android:id="@+id/MainLayout"
+    android:background="@color/white"
+    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:background="@color/white"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:layout_weight="0.3"
     tools:context="org.ema.activities.admin.ABCActivity">
 
     <TextView
         android:id="@+id/usersTitle"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="@string/users"
         android:textColor="@color/blue"
         android:textSize="25sp"
         android:typeface="normal"
-        android:textStyle="bold" />
-
-    <ListView
-        android:layout_width="match_parent"
-        android:layout_height="172dp"
-        android:id="@+id/studentslistView"
-        android:choiceMode="singleChoice"
-        android:clickable="true" />
+        android:textStyle="bold"
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="8dp"
+        app:layout_constraintHorizontal_bias="0.501" />
 
     <TextView
         android:id="@+id/information"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:textColor="@color/red"
         android:text="@string/words"
         android:textSize="25sp"
         android:typeface="normal"
-        android:textStyle="bold" />
+        android:textStyle="bold"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/studentslistView"
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintHorizontal_bias="0.503" />
 
-    <LinearLayout
-        android:id="@+id/list"
-        android:layout_width="match_parent"
-        android:layout_height="206dp"
-        android:layout_weight="0.4"
-        android:orientation="horizontal"
-        android:weightSum="1"
-        android:baselineAligned="false">
-        <!--<CheckBox-->
-        <!--android:id="@+id/usePositionsCB"-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content" />-->
-        <ListView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/wordsListView"
-            android:choiceMode="multipleChoice"
-            android:clickable="true"
-            tools:ignore="InefficientWeight,NestedWeights"
-            android:layout_weight="0.11" />
-    </LinearLayout>
-    <LinearLayout
-        android:id="@+id/buttons"
-        android:layout_width="fill_parent"
-        android:layout_height="0dp"
-        android:orientation="horizontal"
-        android:weightSum="1"
-        android:layout_weight="0.3"
-        android:gravity="center_horizontal">
 
-        <Button
-            android:theme="@style/GoBackButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/goBack"
+    <Button
             android:id="@+id/goBackBtn"
-            android:onClick="goBack"/>
-        <Button
-            android:theme="@style/BlueButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/save"
+            android:onClick="goBack"
+            android:text="@string/goBack"
+            android:theme="@style/GoBackButton"
+            android:layout_marginLeft="8dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginBottom="8dp" />
+
+        <Button
             android:id="@+id/newWord"
-            android:onClick="saveGame" />
-    </LinearLayout>
-</LinearLayout>
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:onClick="saveGame"
+            android:text="@string/save"
+            android:theme="@style/BlueButton"
+            android:layout_marginRight="8dp"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginBottom="8dp" />
+
+    <ListView
+        android:id="@+id/wordsListView"
+        android:layout_width="341dp"
+        android:layout_height="229dp"
+        android:layout_weight="0.11"
+        android:choiceMode="multipleChoice"
+        android:clickable="true"
+        tools:ignore="InefficientWeight,NestedWeights"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/information"
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintBottom_toTopOf="@+id/newWord"
+        app:layout_constraintHorizontal_bias="0.444" />
+
+    <ListView
+        android:id="@+id/studentslistView"
+        android:layout_width="342dp"
+        android:layout_height="135dp"
+        android:choiceMode="singleChoice"
+        android:clickable="true"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/usersTitle"
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="parent" />
+
+</android.support.constraint.ConstraintLayout>
