--- a/app/src/main/res/layout/activity_manage_words.xml
+++ b/app/src/main/res/layout/activity_manage_words.xml
@@ -14,89 +14,101 @@
   ~ See the License for the specific language governing permissions and
   ~ limitations under the License.
   -->
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
-        android:id="@+id/LinearLayout"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:background="@color/white"
+<android.support.constraint.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/MainLayout"
+    android:background="@color/white"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
         tools:context="org.ema.activities.admin.WordsManagementActivity">
 
-    <GridLayout
-        android:layout_width="match_parent"
+
+    <TextView
+        android:id="@+id/information"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_weight="0.1"
-        android:weightSum="1">
+        android:text="@string/words"
+        android:textColor="@color/blue"
+        android:textSize="25sp"
+        android:textStyle="bold"
+        android:typeface="normal"
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginTop="8dp"
+        app:layout_constraintHorizontal_bias="0.835" />
 
-            <TextView
-                android:id="@+id/information"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textColor="@color/blue"
-                android:text="@string/words"
-                android:textSize="25sp"
-                android:typeface="normal"
-                android:textStyle="bold" />
+    <ListView
+        android:id="@+id/wordsListView"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginTop="8dp"
+        android:layout_weight="1.67"
+        android:choiceMode="multipleChoice"
+        android:clickable="true"
+        app:layout_constraintTop_toBottomOf="@+id/information"
+        tools:ignore="InefficientWeight,NestedWeights"
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintBottom_toTopOf="@+id/deleteButton" />
 
-    </GridLayout>
-
-
-        <LinearLayout
-            android:id="@+id/list"
-            android:layout_width="match_parent"
-            android:layout_height="253dp"
-            android:orientation="horizontal"
-            android:layout_weight="0.8"
-            android:weightSum="1"
-            android:baselineAligned="false">
-            <!--<CheckBox-->
-                <!--android:id="@+id/usePositionsCB"-->
-                <!--android:layout_width="wrap_content"-->
-                <!--android:layout_height="wrap_content" />-->
-            <ListView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/wordsListView"
-                android:layout_weight="1.67"
-                android:choiceMode="multipleChoice"
-                android:clickable="true"
-                tools:ignore="InefficientWeight,NestedWeights" />
-        </LinearLayout>
-    <GridLayout
-        android:layout_width="match_parent"
+    <Button
+        android:id="@+id/goBackBtn"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@color/white"
-        android:layout_weight="0.1"
-        android:id="@+id/actions">
+        android:onClick="goBack"
+        android:text="@string/goBack"
+        android:theme="@style/GoBackButton"
+        android:layout_marginLeft="8dp"
+        android:layout_marginStart="8dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="13dp" />
+    <Button
+        android:id="@+id/editButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:onClick="updateWord"
+        android:text="@string/edit"
+        android:theme="@style/BlueButton"
+        android:layout_marginRight="8dp"
+        android:layout_marginEnd="8dp"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintBottom_toTopOf="@+id/newWord" />
 
-        <Button
-            android:id="@+id/goBackBtn"
-            android:theme="@style/GoBackButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/goBack"
-            android:onClick="goBack" />
-        <Button
-            android:theme="@style/RedButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/delete"
-            android:id="@+id/deleteButton" />
-        <Button
-            android:theme="@style/BlueButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/edit"
-            android:id="@+id/editButton"
-            android:onClick="updateWord" />
-        <Button
-            android:theme="@style/GreenButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/add"
-            android:id="@+id/newWord"
-            android:onClick="addWord"/>
-    </GridLayout>
+    <Button
+        android:id="@+id/deleteButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/delete"
+        android:theme="@style/RedButton"
+        android:layout_marginBottom="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginStart="8dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/goBackBtn" />
 
-</LinearLayout>
+    <Button
+        android:id="@+id/newWord"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:onClick="addWord"
+        android:text="@string/add"
+        android:theme="@style/GreenButton"
+        android:layout_marginRight="8dp"
+        android:layout_marginEnd="8dp"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="8dp" />
+
+
+
+</android.support.constraint.ConstraintLayout>
