--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -14,36 +14,31 @@
   ~ See the License for the specific language governing permissions and
   ~ limitations under the License.
   -->
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/LinearLayout"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:id="@+id/MainLayout"
     android:background="@color/white"
     android:orientation="vertical"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     tools:context="org.ema.activities.admin.SettingsActivity">
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="308dp"
+        android:layout_height="81dp"
         android:src="@mipmap/logo3"
-        android:contentDescription="@string/logo" />
+        android:contentDescription="@string/logo"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintHorizontal_bias="0.2"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="8dp" />
 
-    <LinearLayout
-        android:orientation="vertical"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/white"
-        android:paddingBottom="@dimen/activity_vertical_margin"
-        android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:paddingRight="@dimen/activity_horizontal_margin"
-        android:paddingTop="@dimen/activity_vertical_margin"
-        android:gravity="center_horizontal">
         <TextView
             android:id="@+id/textView"
             android:layout_width="wrap_content"
@@ -52,38 +47,54 @@
             android:textStyle="bold"
             android:text="@string/settings"
             android:textAppearance="?android:attr/textAppearanceLarge"
-            android:layout_gravity="center_horizontal" />
-        <!-- Difficult Level -->
-        <TextView
-            android:id="@+id/showWordId"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/imageView"
+            android:layout_marginRight="8dp"
+            app:layout_constraintRight_toRightOf="parent"
+            android:layout_marginLeft="8dp"
+            app:layout_constraintLeft_toLeftOf="parent" />
+
+
+    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/radioGroup"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginTop="8dp"
+        android:orientation="horizontal"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/language">
+
+        <RadioButton
+            android:id="@+id/portugueseRadioButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/showWord"
-            android:textAppearance="?android:attr/textAppearanceMedium"
-            android:layout_gravity="start" />
+            android:layout_marginLeft="50dp"
+            android:layout_marginStart="50dp"
+            android:checked="true"
+            android:onClick="onLanguageClicked"
+            android:text="@string/portuguese"
+            app:layout_constraintLeft_toLeftOf="parent" />
 
-        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
-            android:layout_width="fill_parent"
+        <RadioButton
+            android:id="@+id/englishRadioButton"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:layout_marginLeft="8dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginRight="50dp"
+            android:layout_marginEnd="50dp"
+            android:checked="false"
+            android:onClick="onLanguageClicked"
+            android:text="@string/english"
+            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintLeft_toRightOf="@+id/portugueseRadioButton"
+            app:layout_constraintRight_toRightOf="parent" />
 
-            <RadioButton
-                android:id="@+id/yesForShowWordRadioButton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:checked="true"
-                android:text="@string/Yes"
-                android:onClick="onLevelClicked"/>
-
-            <RadioButton
-                android:id="@+id/dontShowWordRadioButton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:checked="false"
-                android:text="@string/No"
-                android:onClick="onLevelClicked"/>
-
-        </RadioGroup>
+    </RadioGroup>
         <!-- language -->
         <TextView
             android:id="@+id/language"
@@ -91,92 +102,158 @@
             android:layout_height="wrap_content"
             android:text="@string/language"
             android:textAppearance="?android:attr/textAppearanceMedium"
-            android:layout_gravity="start" />
+            android:layout_gravity="start"
+            android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/textView"
+            android:layout_marginRight="8dp"
+            app:layout_constraintRight_toRightOf="parent"
+            android:layout_marginLeft="8dp"
+            app:layout_constraintLeft_toLeftOf="parent" />
 
-        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-            <RadioButton
-                android:id="@+id/portugueseRadioButton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:checked="true"
-                android:text="@string/portuguese"
-                android:onClick="onLanguageClicked" />
-
-            <RadioButton
-                android:id="@+id/englishRadioButton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:checked="false"
-                android:text="@string/english"
-                android:onClick="onLanguageClicked"/>
-        </RadioGroup>
-
-        <!-- Sound -->
-        <TextView
-            android:id="@+id/sound"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/sound"
-            android:textAppearance="?android:attr/textAppearanceMedium"
-            android:layout_gravity="start" />
-
-        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-            <RadioButton
-                android:id="@+id/soundOn"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:checked="true"
-                android:text="@string/turnOn"
-                android:onClick="onSoundClicked"/>
-
-            <RadioButton
-                android:id="@+id/soundOff"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:checked="false"
-                android:text="@string/turnOff"
-                android:onClick="onSoundClicked"/>
-        </RadioGroup>
-    </LinearLayout>
+    <!-- Sound -->
 
 
-
-    <LinearLayout
-        android:orientation="horizontal"
-        android:layout_width="match_parent"
+    <TextView
+        android:id="@+id/sound"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@color/white"
-        android:paddingBottom="@dimen/activity_vertical_margin"
-        android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:paddingRight="@dimen/activity_horizontal_margin"
-        android:paddingTop="@dimen/activity_vertical_margin"
-        android:gravity="center_horizontal">
+        android:layout_gravity="start"
+        android:layout_marginLeft="8dp"
+        android:text="@string/sound"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />
 
-        <Button
-            android:theme="@style/GoBackButton"
+    <RadioGroup
+        android:id="@+id/soundGroup"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:orientation="horizontal"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/sound">
+
+        <RadioButton
+            android:id="@+id/soundOn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/goBack"
-            android:id="@+id/goBackBtn"
-            android:onClick="goBack"
-            tools:ignore="ButtonStyle" />
+            android:checked="true"
+            android:layout_marginLeft="50dp"
+            android:layout_marginStart="50dp"
+            android:onClick="onSoundClicked"
+            android:text="@string/turnOn" />
 
-        <Button
+        <RadioButton
+            android:id="@+id/soundOff"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:theme="@style/BlueButton"
-            android:text="@string/save"
-            android:id="@+id/menuButton"
-            android:onClick="save"
-            tools:ignore="ButtonStyle"/>
+            android:checked="false"
+            android:layout_marginLeft="8dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginRight="50dp"
+            android:layout_marginEnd="50dp"
+            android:onClick="onSoundClicked"
+            android:text="@string/turnOff" />
 
-    </LinearLayout>
-</LinearLayout>
+    </RadioGroup>
+
+    <!-- Difficult Level -->
+    <TextView
+        android:id="@+id/showWordId"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/showWord"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:layout_gravity="start"
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/soundGroup" />
+
+    <RadioGroup
+        android:id="@+id/radioGroup2"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:orientation="horizontal"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/showWordId">
+
+        <RadioButton
+            android:id="@+id/yesForShowWordRadioButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="50dp"
+            android:layout_marginStart="50dp"
+            android:checked="true"
+            android:onClick="onLevelClicked"
+            android:text="@string/Yes"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/sound" />
+
+        <RadioButton
+            android:id="@+id/dontShowWordRadioButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="8dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginRight="50dp"
+            android:layout_marginEnd="50dp"
+            android:checked="false"
+            android:onClick="onLevelClicked"
+            android:text="@string/No"
+            app:layout_constraintHorizontal_bias="0.503"
+            app:layout_constraintLeft_toRightOf="@+id/yesForShowWordRadioButton"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/sound" />
+
+    </RadioGroup>
+
+
+
+    <Button
+        android:theme="@style/GoBackButton"
+        android:layout_width="0dp"
+        android:layout_height="48dp"
+        android:text="@string/goBack"
+        android:id="@+id/goBackBtn"
+        android:onClick="goBack"
+        tools:ignore="ButtonStyle"
+        android:layout_marginLeft="8dp"
+        android:layout_marginStart="8dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="9dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/radioGroup2" />
+
+    <Button
+        android:layout_width="0dp"
+        android:layout_height="48dp"
+        android:theme="@style/BlueButton"
+        android:text="@string/save"
+        android:id="@+id/menuButton"
+        android:onClick="save"
+        android:layout_marginEnd="8dp"
+        tools:ignore="ButtonStyle"
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="9dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/radioGroup2" />
+
+
+</android.support.constraint.ConstraintLayout>
