--- a/app/src/main/res/layout/activity_stats.xml
+++ b/app/src/main/res/layout/activity_stats.xml
@@ -13,167 +13,67 @@
   ~ See the License for the specific language governing permissions and
   ~ limitations under the License.
   -->
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/LinearLayout"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:id="@+id/MainLayout"
     android:background="@color/white"
     android:orientation="vertical"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     tools:context="org.ema.activities.operations.StatsActivity">
-
-    <GridLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:weightSum="1">
 
 
             <TextView
                 android:id="@+id/title"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="31dp"
                 android:text="@string/stats"
                 android:textSize="25sp"
                 android:textStyle="bold"
-                android:typeface="normal" />
+                android:typeface="normal"
+                android:layout_marginLeft="8dp"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toLeftOf="@+id/imageView"
+                android:layout_marginRight="8dp"
+                app:layout_constraintTop_toTopOf="parent"
+                android:layout_marginTop="8dp"
+                app:layout_constraintHorizontal_bias="0.536" />
 
             <ImageView
                 android:id="@+id/imageView"
-                android:layout_width="match_parent"
+                android:layout_width="0dp"
                 android:layout_height="32dp"
                 android:layout_gravity="end"
                 android:gravity="end"
                 android:src="@mipmap/logo3"
                 android:contentDescription="@string/logo"
-                android:adjustViewBounds="true" />
+                android:adjustViewBounds="true"
+                android:layout_marginRight="16dp"
+                android:layout_marginEnd="16dp"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                android:layout_marginTop="8dp" />
 
-    </GridLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="0.02"
-        android:gravity="center_horizontal">
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="44dp"
-            android:layout_gravity="center_horizontal"
-            android:gravity="center_horizontal"
-            tools:ignore="UselessParent">
 
             <TextView
                 android:id="@+id/nameForStats"
-                android:layout_width="match_parent"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:text="@string/name"
                 android:textSize="25sp"
                 android:textStyle="bold"
-                android:typeface="normal" />
-        </LinearLayout>
+                android:typeface="normal"
+                android:layout_marginRight="8dp"
+                app:layout_constraintRight_toRightOf="parent"
+                android:layout_marginLeft="8dp"
+                app:layout_constraintLeft_toLeftOf="parent"
+                android:layout_marginTop="8dp"
+                app:layout_constraintTop_toBottomOf="@+id/title" />
 
-    </LinearLayout>
 
-    <LinearLayout
-        android:id="@+id/contentLayout"
-        android:layout_width="match_parent"
-        android:layout_height="606dp"
-        android:layout_weight="0.9"
-        android:orientation="vertical">
-
-        <TableLayout
-            android:id="@+id/statsTableLayout"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:stretchColumns="0,1"
-            android:padding="5dip"
-            android:layout_weight="0.3"
-            tools:ignore="NestedWeights">
-
-            <TableRow
-                android:id="@+id/tableRow1"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
-                <TextView
-                    android:layout_column="0"
-                    android:background="@drawable/table_border"
-                    android:text="@string/Points"
-                    android:padding="3dip"
-                    android:textAppearance="?android:attr/textAppearanceLarge"/>
-                <TextView
-                    android:id="@+id/pointsTextValue"
-                    android:layout_column="1"
-                    android:background="@drawable/table_border"
-                    android:padding="3dip"
-                    android:textAppearance="?android:attr/textAppearanceLarge"/>
-            </TableRow>
-            <TableRow
-                android:id="@+id/tableRow2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
-                <TextView
-                    android:layout_column="0"
-                    android:background="@drawable/table_border"
-                    android:text="@string/playedActivities"
-                    android:padding="3dip"
-                    android:textAppearance="?android:attr/textAppearanceLarge"/>
-                <TextView
-                    android:id="@+id/playedActivitiesTextValue"
-                    android:layout_column="1"
-                    android:background="@drawable/table_border"
-                    android:padding="3dip"
-                    android:textAppearance="?android:attr/textAppearanceLarge"/>
-            </TableRow>
-            <TableRow
-                android:id="@+id/tableRow3"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
-                <TextView
-                    android:layout_column="0"
-                    android:background="@drawable/table_border"
-                    android:text="@string/highestPointing"
-                    android:padding="3dip"
-                    android:textAppearance="?android:attr/textAppearanceLarge"/>
-                <TextView
-                    android:id="@+id/highestPointingTextValue"
-                    android:layout_column="1"
-                    android:background="@drawable/table_border"
-                    android:padding="3dip"
-                    android:textAppearance="?android:attr/textAppearanceLarge"/>
-            </TableRow>
-            <TableRow
-                android:id="@+id/tableRow4"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
-                <TextView
-                    android:layout_column="0"
-                    android:background="@drawable/table_border"
-                    android:text="@string/lowestPointing"
-                    android:padding="5dip"
-                    android:textAppearance="?android:attr/textAppearanceLarge"/>
-                <TextView
-                    android:id="@+id/lowestPointingTextValue"
-                    android:layout_column="1"
-                    android:background="@drawable/table_border"
-                    android:padding="5dip"
-                    android:textAppearance="?android:attr/textAppearanceLarge"/>
-            </TableRow>
-        </TableLayout>
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:orientation="horizontal"
-        android:layout_width="match_parent"
-        android:layout_height="43dp"
-        android:id="@+id/buttonsLayout"
-        android:gravity="center_horizontal">
-
-        <Button
+    <Button
             android:theme="@style/GoBackButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -181,7 +81,112 @@
             android:id="@+id/backBtn"
             android:layout_gravity="center_horizontal"
             android:onClick="goBack"
-            android:gravity="center_horizontal" />
-    </LinearLayout>
+            android:gravity="center_horizontal"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginBottom="8dp"
+            android:layout_marginRight="8dp"
+            app:layout_constraintRight_toRightOf="parent"
+            android:layout_marginLeft="8dp"
+            app:layout_constraintLeft_toLeftOf="parent" />
 
-</LinearLayout>
+    <TableLayout
+        android:id="@+id/statsTableLayout"
+        android:layout_width="305dp"
+        android:layout_height="226dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_weight="0.3"
+        android:padding="5dip"
+        android:stretchColumns="0,1"
+        app:layout_constraintBottom_toTopOf="@+id/backBtn"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/nameForStats"
+        app:layout_constraintVertical_bias="0.151"
+        tools:ignore="NestedWeights">
+
+        <TableRow
+            android:id="@+id/tableRow1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+
+            <TextView
+                android:layout_column="0"
+                android:background="@drawable/table_border"
+                android:padding="3dip"
+                android:text="@string/Points"
+                android:textAppearance="?android:attr/textAppearanceLarge" />
+
+            <TextView
+                android:id="@+id/pointsTextValue"
+                android:layout_column="1"
+                android:background="@drawable/table_border"
+                android:padding="3dip"
+                android:textAppearance="?android:attr/textAppearanceLarge" />
+        </TableRow>
+
+        <TableRow
+            android:id="@+id/tableRow2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+
+            <TextView
+                android:layout_column="0"
+                android:background="@drawable/table_border"
+                android:padding="3dip"
+                android:text="@string/playedActivities"
+                android:textAppearance="?android:attr/textAppearanceLarge" />
+
+            <TextView
+                android:id="@+id/playedActivitiesTextValue"
+                android:layout_column="1"
+                android:background="@drawable/table_border"
+                android:padding="3dip"
+                android:textAppearance="?android:attr/textAppearanceLarge" />
+        </TableRow>
+
+        <TableRow
+            android:id="@+id/tableRow3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+
+            <TextView
+                android:layout_column="0"
+                android:background="@drawable/table_border"
+                android:padding="3dip"
+                android:text="@string/highestPointing"
+                android:textAppearance="?android:attr/textAppearanceLarge" />
+
+            <TextView
+                android:id="@+id/highestPointingTextValue"
+                android:layout_column="1"
+                android:background="@drawable/table_border"
+                android:padding="3dip"
+                android:textAppearance="?android:attr/textAppearanceLarge" />
+        </TableRow>
+
+        <TableRow
+            android:id="@+id/tableRow4"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+
+            <TextView
+                android:layout_column="0"
+                android:background="@drawable/table_border"
+                android:padding="5dip"
+                android:text="@string/lowestPointing"
+                android:textAppearance="?android:attr/textAppearanceLarge" />
+
+            <TextView
+                android:id="@+id/lowestPointingTextValue"
+                android:layout_column="1"
+                android:background="@drawable/table_border"
+                android:padding="5dip"
+                android:textAppearance="?android:attr/textAppearanceLarge" />
+        </TableRow>
+    </TableLayout>
+
+</android.support.constraint.ConstraintLayout>
