--- a/app/src/main/res/layout/activity_take_photo.xml
+++ b/app/src/main/res/layout/activity_take_photo.xml
@@ -14,21 +14,17 @@
   ~ See the License for the specific language governing permissions and
   ~ limitations under the License.
   -->
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/MainLayout"
+    android:background="@color/white"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white"
-    tools:context="org.ema.activities.operations.TakePhotoActivity"
+    tools:context="org.ema.activities.operations.TakePhotoActivity" >
 
-    >
-    <LinearLayout
-        android:orientation="horizontal"
-        android:layout_height="wrap_content"
-        android:layout_width="match_parent"
-        android:layout_weight="0.10"
-        android:weightSum="1">
         <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -40,61 +36,91 @@
             android:textSize="30sp"
             android:textStyle="bold"
             android:layout_weight="0.95"
-            tools:ignore="NestedWeights" />
-        <ImageButton
-            android:layout_width="69dp"
-            android:layout_height="match_parent"
-            android:onClick="rotate"
-            android:background="@null"
-            android:src="@drawable/ic_rotate_right_black_24dp"
-            android:contentDescription="@string/rotate" />
-    </LinearLayout>
+            tools:ignore="NestedWeights"
+            android:layout_marginLeft="8dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginTop="16dp"
+            app:layout_constraintRight_toLeftOf="@+id/imageButton"
+            android:layout_marginRight="8dp"
+            app:layout_constraintHorizontal_bias="0.0" />
 
-
-    <LinearLayout
-        android:layout_width="match_parent"
+    <ImageButton
+        android:id="@+id/imageButton"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_weight="0.60">
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginTop="8dp"
+        android:background="@null"
+        android:contentDescription="@string/rotate"
+        android:onClick="rotate"
+        android:src="@drawable/ic_rotate_right_black_24dp"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintBottom_toTopOf="@+id/photo" />
 
-        <ImageView
-            android:id="@+id/photo"
-            android:layout_width="match_parent"
-            android:layout_height="384dp"
-            android:layout_gravity="center"
-            android:adjustViewBounds="true"
-            android:contentDescription="@string/image"
-            android:cropToPadding="true"
-            android:src="@drawable/ic_photo_camera_black_48dp" />
-    </LinearLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="0.10"
-        android:orientation="vertical"
-        android:layout_gravity="center_vertical">
+
+    <ImageView
+        android:id="@+id/photo"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_gravity="center"
+        android:layout_marginBottom="8dp"
+        android:layout_marginTop="8dp"
+        android:adjustViewBounds="true"
+        android:contentDescription="@string/image"
+        android:cropToPadding="true"
+        android:src="@drawable/ic_photo_camera_black_48dp"
+        app:layout_constraintBottom_toTopOf="@+id/ok"
+        app:layout_constraintTop_toBottomOf="@+id/textView"
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintHorizontal_bias="0.0" />
+
 
         <Button
             android:id="@+id/btnTakePhoto"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:text="@string/newPhoto"
             android:onClick="launchCamera"
-            android:theme="@style/PhotoButton" />
+            android:theme="@style/PhotoButton"
+            android:layout_marginLeft="8dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            android:layout_marginRight="8dp"
+            app:layout_constraintRight_toRightOf="parent"
+            android:layout_marginBottom="7dp"
+            app:layout_constraintBottom_toTopOf="@+id/cancel" />
 
         <Button
             android:id="@+id/ok"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:onClick="toChallenge"
             android:text="@string/ok"
-            android:theme="@style/BlueButton" />
+            android:theme="@style/BlueButton"
+            android:layout_marginLeft="8dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            android:layout_marginRight="8dp"
+            app:layout_constraintRight_toRightOf="parent"
+            android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toTopOf="@+id/btnTakePhoto" />
         <Button
             android:id="@+id/cancel"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:onClick="toChallenge"
             android:text="@string/cancel"
-            android:theme="@style/CancelButton" />
-    </LinearLayout>
+            android:theme="@style/CancelButton"
+            android:layout_marginLeft="8dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            android:layout_marginRight="8dp"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginBottom="8dp" />
 
-</LinearLayout>
+</android.support.constraint.ConstraintLayout>
