--- a/app/src/main/res/layout/activity_student_game.xml
+++ b/app/src/main/res/layout/activity_student_game.xml
@@ -29,39 +29,39 @@
         <ProgressBar
             android:id="@+id/progressBar"
             style="?android:attr/progressBarStyleHorizontal"
-            android:layout_width="131dp"
+            android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_gravity="center_vertical|center_horizontal"
             app:layout_constraintTop_toTopOf="parent"
             android:layout_marginTop="8dp"
-            android:layout_marginLeft="102dp"
-            app:layout_constraintLeft_toLeftOf="parent"
-            android:layout_marginStart="8dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginRight="8dp"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintHorizontal_bias="0.1"
-            android:progress="0"/>
-
-        <ImageView
-            android:id="@+id/scrambbleImage"
-            android:layout_width="0dp"
-            android:layout_height="191dp"
-            android:layout_gravity="center_vertical"
-            android:contentDescription="@string/imageOf"
-            android:src="@drawable/ic_photo_black_48dp"
-            android:layout_marginRight="8dp"
-            app:layout_constraintRight_toRightOf="parent"
             android:layout_marginLeft="8dp"
             app:layout_constraintLeft_toLeftOf="parent"
-            android:layout_marginTop="8dp"
-            app:layout_constraintBottom_toBottomOf="@+id/awnser"
-            app:layout_constraintTop_toBottomOf="@+id/progressBar"
-            android:layout_marginBottom="8dp"
             android:layout_marginStart="8dp"
             android:layout_marginEnd="8dp"
-            app:layout_constraintHorizontal_bias="0.503"
-            app:layout_constraintVertical_bias="0.0" />
+            android:layout_marginRight="8dp"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintHorizontal_bias="0.101"
+            android:progress="0"/>
+
+    <ImageView
+        android:id="@+id/scrambbleImage"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_vertical"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:contentDescription="@string/imageOf"
+        android:src="@drawable/ic_photo_black_48dp"
+        app:layout_constraintBottom_toBottomOf="@+id/awnser"
+        app:layout_constraintHorizontal_bias="0.503"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/progressBar"
+        app:layout_constraintVertical_bias="0.0" />
 
     <EditText
         android:id="@+id/awnser"
