Change Scramble flow for users #74

--- a/app/src/main/res/layout/activity_manage_words.xml
+++ b/app/src/main/res/layout/activity_manage_words.xml
@@ -82,7 +82,7 @@
         android:layout_marginEnd="8dp"
         app:layout_constraintRight_toRightOf="parent"
         android:layout_marginBottom="8dp"
-        app:layout_constraintBottom_toTopOf="@+id/newWord" />
+        app:layout_constraintBottom_toTopOf="@+id/wordsBtn" />
 
     <Button
         android:id="@+id/deleteButton"
@@ -97,7 +97,7 @@
         app:layout_constraintBottom_toTopOf="@+id/goBackBtn" />
 
     <Button
-        android:id="@+id/newWord"
+        android:id="@+id/wordsBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:onClick="addWord"
