--- a/app/src/main/res/layout/activity_abc_user.xml
+++ b/app/src/main/res/layout/activity_abc_user.xml
@@ -42,23 +42,20 @@
         android:layout_marginTop="8dp"
         app:layout_constraintHorizontal_bias="0.501" />
 
-    <TextView
-        android:id="@+id/information"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:textColor="@color/red"
-        android:text="@string/words"
-        android:textSize="25sp"
-        android:typeface="normal"
-        android:textStyle="bold"
-        android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/studentslistView"
-        android:layout_marginRight="8dp"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginLeft="8dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintHorizontal_bias="0.503" />
 
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="0dp"
+        android:layout_height="32dp"
+        android:layout_gravity="end"
+        android:layout_marginTop="8dp"
+        android:layout_marginRight="16dp"
+        android:adjustViewBounds="true"
+        android:contentDescription="@string/logo"
+        android:gravity="end"
+        android:src="@mipmap/logo3"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
             android:id="@+id/goBackBtn"
@@ -74,11 +71,11 @@
             android:layout_marginBottom="8dp" />
 
         <Button
-            android:id="@+id/newWord"
+            android:id="@+id/wordsBtn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:onClick="saveGame"
-            android:text="@string/save"
+            android:onClick="loadWords"
+            android:text="@string/words"
             android:theme="@style/BlueButton"
             android:layout_marginRight="8dp"
             android:layout_marginEnd="8dp"
@@ -87,35 +84,19 @@
             android:layout_marginBottom="8dp" />
 
     <ListView
-        android:id="@+id/wordsListView"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_weight="0.11"
-        android:choiceMode="multipleChoice"
-        android:clickable="true"
-        tools:ignore="InefficientWeight,NestedWeights"
-        android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/information"
-        android:layout_marginRight="8dp"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginLeft="8dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginBottom="8dp"
-        app:layout_constraintBottom_toTopOf="@+id/newWord"
-        app:layout_constraintHorizontal_bias="0.444" />
-
-    <ListView
         android:id="@+id/studentslistView"
         android:layout_width="0dp"
-        android:layout_height="135dp"
+        android:layout_height="0dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginTop="7dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginBottom="8dp"
         android:choiceMode="singleChoice"
         android:clickable="true"
-        android:layout_marginTop="7dp"
-        app:layout_constraintTop_toBottomOf="@+id/usersTitle"
-        android:layout_marginRight="8dp"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginLeft="8dp"
+        app:layout_constraintBottom_toTopOf="@+id/goBackBtn"
+        app:layout_constraintHorizontal_bias="0.447"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintHorizontal_bias="0.447" />
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/usersTitle" />
 
 </android.support.constraint.ConstraintLayout>
